deploy/retrieveUnpackaged/objects/SFDC_Class__c.object
<CustomObject>
    <description>Track the date and location of where your various Courses will be taught, and who has enrolled in this Class.</description>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>21111: Login &amp; Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21121: Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21131: Account &amp; Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21141: Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21151: Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21161: Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21100: All Classes (Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23111:  Login &amp; Home page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23121: Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23131: Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23141: Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23151: Forecasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23161: Standard Customer Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23171: Server Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23181: Technical Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23191: Reporting, Dashboards &amp; Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23100: All Classes (Support)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <label>Class Type</label>
        <picklist>
            <picklistValues>
                <fullName>CBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructor Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Offered__c</fullName>
        <label>Date Offered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>MailTrust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <picklist>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datapoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <label>Instructor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Capacity__c</fullName>
        <label>Max Capacity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Enrolled__c</fullName>
        <label>Number Enrolled</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSVP_Date__c</fullName>
        <description>When they need to be registered by.</description>
        <inlineHelpText>This is the last date to register for the even.</inlineHelpText>
        <label>RSVP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Meeting_Link__c</fullName>
        <label>Web Meeting Link</label>
        <type>Url</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>ActiveClasses</fullName>
        <columns>NAME</columns>
        <columns>Date_Offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active Classes</label>
        <sharedTo>
            <group>All Internal Users Public Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveClasses</fullName>
        <columns>NAME</columns>
        <columns>Date_Offered__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>- All Active Classes</label>
        <sharedTo>
            <group>All Partner Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllClasses</fullName>
        <columns>NAME</columns>
        <columns>Date_Offered__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Classes</label>
        <sharedTo>
            <group>All Internal Users Public Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Class Session</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>